# ERCOT_electricity_price_forecast

./: README.md  pyproject.toml
data/: POC Sample Data.xlsx  POC Sample Data_test.xlsx  feature_causality.csv  features.csv  features_select.csv  ts.csv  ts_forecast.csv  ts_select.csv  ts_select_stationary.csv
src/: 3 - Stationarity and Seasonality.ipynb  config.py  requirements.txt  utils.py
