[tool.poetry]
name = "ercot-electricity-price-forecast"
version = "0.1.2"
description = "Demonstration of time series methods used to predict hourly day-ahead and real time $/MWh prices"
authors = ["Matt Chmielewski <43832628+emskiphoto@users.noreply.github.com>"]
license = "apache 1.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.1,<3.12"
matplotlib = "^3.9.3"
pandas = "^2.2.3"
scikit-learn = "^1.6.0"
seaborn = "^0.13.2"
statsmodels = "^0.14.4"
tqdm = "^4.67.1"
scipy = ">=1.11"
numpy = ">=1.25.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
